[package]
name = "sp-finality-tendermint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.0.0", default-features = false, features = [
  "derive",
] }
sc-finality-tendermint = { package = "sc-finality-tendermint", version = "0.1.0", default-features = false, path="../../client/finality-tendermint"}
log = { version = "0.4", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
sp-api = { version = "4.0.0-dev", default-features = false}
sp-application-crypto = { version = "23.0.0", default-features = false }
sp-core = { version = "21.0.0", default-features = false }
sp-keystore = { version = "0.27.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", optional = true }
sp-runtime = { version = "24.0.0", default-features = false  }
sp-std = { version = "8.0.0", default-features = false }
# TODO: import consensus

[features]
default = ["std"]
std = [
  "log",
  "serde",
  "codec/std",
  "scale-info/std",
  # "sc-finality-tendermint/std",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-core/std",
  "sp-keystore",
  "sp-runtime/std",
  "sp-std/std",
]
