[package]
name = "sp-hotstuff-finality"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Primitives for HOTSTUFF integration, suitable for WASM compilation."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
# grandpa = { package = "finality-grandpa", version = "0.16.2", default-features = false, features = ["derive-codec"] }

finality-hotstuff = {path="../../finality-hotstuff", default-features = false, features = ["derive-codec"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.163", features = ["derive", "alloc"], default-features = false, optional = true }
sp-api = { version = "4.0.0-dev", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-application-crypto = { version = "23.0.0", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { version = "21.0.0", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-keystore = { version = "0.27.0", default-features = false, optional = true,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { version = "8.0.0", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"finality-hotstuff/std",
	"log/std",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
 	"sp-keystore/std",
 	"sp-runtime/std",
 	"sp-std/std"
]

# Serde support without relying on std features.
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-application-crypto/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
